# gr-backscatter

./: .gitignore  CMakeLists.txt  MANIFEST.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt  recvpdus  recvpdus.py
cmake/Modules/: gnuradio-backscatterConfig.cmake
docs/: CMakeLists.txt  README.backscatter
grc/: CMakeLists.txt  backscatter_bs_frame_decoder.block.yml  backscatter_burst_frame_scaler.block.yml  backscatter_burst_frame_tagger.block.yml  backscatter_gate.block.yml  backscatter_http_sink.block.yml  backscatter_multiply_by_tag_value_ff.block.yml  backscatter_pdu_ber.block.yml  backscatter_pdu_rate.block.yml  backscatter_power_detector.block.yml
lib/: CMakeLists.txt  bs_frame_decoder_impl.cc  bs_frame_decoder_impl.h  burst_frame_scaler_impl.cc  burst_frame_scaler_impl.h  burst_frame_tagger_impl.cc  burst_frame_tagger_impl.h  gate_impl.cc  gate_impl.h  multiply_by_tag_value_ff_impl.cc  multiply_by_tag_value_ff_impl.h  pdu_ber_impl.cc  pdu_ber_impl.h  pdu_rate_impl.cc  pdu_rate_impl.h  power_detector_impl.cc  power_detector_impl.h
python/backscatter/bindings/: CMakeLists.txt  bs_frame_decoder_python.cc  burst_frame_scaler_python.cc  burst_frame_tagger_python.cc  gate_python.cc  multiply_by_tag_value_ff_python.cc  pdu_ber_python.cc  pdu_rate_python.cc  power_detector_python.cc  python_bindings.cc
python/backscatter/bindings/docstrings/: bs_frame_decoder_pydoc_template.h  burst_frame_scaler_pydoc_template.h  burst_frame_tagger_pydoc_template.h  gate_pydoc_template.h  multiply_by_tag_value_ff_pydoc_template.h  pdu_ber_pydoc_template.h  pdu_rate_pydoc_template.h  power_detector_pydoc_template.h
(+21 files in other folders)
